--- a/webpage/docs/08_Familie.mdx
+++ b/webpage/docs/08_Familie.mdx
@@ -1,7 +1,11 @@
-# 👨‍👩‍👧‍👦 Familie 가족
+# 👨‍👩‍👧‍👦 Familie
 
-<div style="text-align: center;">
-  <img src="images/familie.png" alt="Familie" width="200" />
+<div style={{ textAlign: 'center' }}>
+  <img 
+    src="images/familie.png" 
+    alt="Familie" 
+    style={{ maxWidth: '300px', width: '50%', height: 'auto' }} 
+  />
 </div>
 
 
