--- a/webpage/docs/08_Familie.mdx
+++ b/webpage/docs/08_Familie.mdx
@@ -2,7 +2,7 @@
 
 <div style={{ textAlign: 'center' }}>
   <img 
-    src="images/familie.png" 
+    src="./images/familie.png" 
     alt="Familie" 
     style={{ maxWidth: '300px', width: '50%', height: 'auto' }} 
   />
