--- a/webpage/docs/01_Hangeul_Lesen/02_Uebung.mdx
+++ b/webpage/docs/01_Hangeul_Lesen/02_Uebung.mdx
@@ -1,4 +1,4 @@
-# Übungsaufgaben zur Festigung 💪✏️
+# ✍️ Übung
 
 Die folgenden Übungen helfen dabei, das Erlernte zu überprüfen und zu festigen. Jede Aufgabe enthält einen Tipp und die Lösung:
 
