--- a/webpage/docs/02_Konsonanten/02_Uebung.mdx
+++ b/webpage/docs/02_Konsonanten/02_Uebung.mdx
@@ -1,4 +1,4 @@
-# ✍️ **Übung: Konsonanten erkennen und kombinieren**
+# ✍️ Übung
 
 ## **Teil 1: Erkenne den Konsonanten**
 Lies die folgenden Silben und **unterstreiche** den Konsonanten. Schreibe daneben seine **Romanisierung** und seine **Aussprache** auf Deutsch.
